--- a/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/admin/GrupoPermisos.xhtml
+++ b/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/admin/GrupoPermisos.xhtml
@@ -3,7 +3,7 @@
                 xmlns:f="http://java.sun.com/jsf/core" 
                 xmlns:ui="http://java.sun.com/jsf/facelets" 
                 xmlns:p="http://primefaces.org/ui"
-                template="template/plantilla.xhtml">
+                template="/template/plantilla.xhtml">
     <ui:define name="title"><h:outputText value="Sinetcom - Permisos de Grupo"></h:outputText></ui:define>
     <ui:define name="menu"><ui:include src="/menu/menu.xhtml" /></ui:define>
     <ui:define name="content">
