--- a/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/contratos/Contactos.xhtml
+++ b/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/contratos/Contactos.xhtml
@@ -4,7 +4,7 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets" 
                 xmlns:p="http://primefaces.org/ui"
                 template="/template/plantilla.xhtml">
-    <ui:define name="title"><h:outputText value="Sinetcom - Ingreso de Clientes"></h:outputText></ui:define>
+    <ui:define name="title"><h:outputText value="Sinetcom - Ingreso de Contactos de Cliente"></h:outputText></ui:define>
     <ui:define name="menu"><ui:include src="/menu/menu.xhtml" /></ui:define>
     <ui:define name="content">
         <f:view contentType="text/html">
@@ -20,6 +20,9 @@
                         <f:facet name="header">
                             <h:outputText value="Contactos"/>
                         </f:facet>
+                        
+                        <p:ajax event="rowSelect" immediate="true" update="btnEliminar"></p:ajax>
+                        <p:ajax event="rowUnselect" immediate="true" update="btnEliminar"></p:ajax>
 
                         <p:column headerText="Cedula" sortBy="#{contactos.cedulaDeCuidadania}" filterBy="#{contactos.cedulaDeCuidadania}">
                             <h:outputText value="#{contactos.cedulaDeCuidadania}"/>
@@ -43,7 +46,7 @@
 
                         <f:facet name="footer">
                             <p:commandButton id="btnCrear" value="Crear" type="button" onclick="PF('ingreso').show();"/>       
-                            <p:commandButton id="btnEliminar" process="dtContactos" value="Eliminar" action="#{ingresoContactoBean.eliminarContacto()}" update=":verContactosForm:dtContactos"/>                       
+                            <p:commandButton id="btnEliminar" process="dtContactos" value="Eliminar" action="#{ingresoContactoBean.eliminarContacto()}" disabled="#{not(ingresoContactoBean.contactoSeleccionado != null)}" update=":verContactosForm:dtContactos"/>                       
                         </f:facet>
                     </p:dataTable>    
                 </h:form>
@@ -76,7 +79,7 @@
                             <p:outputLabel for="contactoMail" value="e-Mail:"/>
                             <p:inputText id="contactoMail" value="#{ingresoContactoBean.mail}" required="true"/>
 
-                            <p:commandButton id="btnGrabar" value="Grabar" action="#{ingresoContactoBean.crearContacto()}" onclick="PF('ingreso').hide();" update=":verContactosForm:dtContactos">
+                            <p:commandButton id="btnGrabar" value="Grabar" action="#{ingresoContactoBean.crearContacto()}" oncomplete="if (args &amp;&amp; !args.validationFailed) PF('ingreso').hide();" update=":verContactosForm:dtContactos">
                                 <f:ajax execute="@all" render="@form"/>
                             </p:commandButton>
 
