--- a/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/contratos/TiposContrato.xhtml
+++ b/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/contratos/TiposContrato.xhtml
@@ -20,18 +20,21 @@
                         <f:facet name="header">
                             <h:outputText value="Tipos de Contratos"/>
                         </f:facet>
+                        
+                        <p:ajax event="rowSelect" immediate="true" update="btnEliminar"></p:ajax>
+                        <p:ajax event="rowUnselect" immediate="true" update="btnEliminar"></p:ajax>
 
                         <p:column headerText="Tipo" sortBy="#{tipos.tipo}" filterBy="#{tipos.tipo}">
                             <h:outputText value="#{tipos.tipo}"/>
                         </p:column>
 
                         <p:column headerText="Validez" sortBy="#{tipos.valido}" filterBy="#{tipos.valido}">
-                            <h:outputText value="#{tipos.valido}"/>
+                            <h:outputText value="#{tipos.valido ? 'Si' : 'No'}"/>
                         </p:column>
 
                         <f:facet name="footer">
                             <p:commandButton id="btnCrear" value="Crear" type="button" onclick="PF('ingreso').show();" update=":form:pnlgrdIngreso"/>       
-                            <p:commandButton id="btnEliminar" process="dtTiposContrato" value="Eliminar" action="#{ingresoTipoContratoBean.eliminarTipo()}" update=":tipoContratoForm:dtTiposContrato"/>                       
+                            <p:commandButton id="btnEliminar" process="dtTiposContrato" value="Eliminar" action="#{ingresoTipoContratoBean.eliminarTipo()}" disabled="#{not(ingresoTipoContratoBean.tipoContratoSeleccionado != null)}" update=":tipoContratoForm:dtTiposContrato"/>                       
                         </f:facet>
                     </p:dataTable>                    
                 </h:form>
@@ -48,7 +51,7 @@
                                     <f:selectItem itemLabel="No" itemValue="false"/>
                                 </p:selectOneRadio>
 
-                                <p:commandButton id="btnGrabar" process="@form" value="Grabar" action="#{ingresoTipoContratoBean.crearTipoContrato()}" onclick="PF('ingreso').hide();" update=":tipoContratoForm:dtTiposContrato">
+                                <p:commandButton id="btnGrabar" process="@form" value="Grabar" action="#{ingresoTipoContratoBean.crearTipoContrato()}" oncomplete="if (args &amp;&amp; !args.validationFailed) PF('ingreso').hide();" update=":tipoContratoForm:dtTiposContrato">
                                     <f:ajax execute="@all" render="@form"/>
                                 </p:commandButton>
 
